tests/should_fail/opaque_unproveable.coma
module M_opaque_unproveable__test [#"opaque_unproveable.rs" 14 0 14 13]
  let%span sopaque_unproveable = "opaque_unproveable.rs" 16 18 16 29
  
  use creusot.prelude.Any
  
  predicate opaque [#"opaque_unproveable.rs" 9 4 9 27]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec test [#"opaque_unproveable.rs" 14 0 14 13] (return' (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = {[@expl:assertion] [%#sopaque_unproveable] opaque} s1 | s1 = return''0 {_0} ] ]
    [ & _0: () = Any.any_l () ]) [ return''0 (result: ()) -> (! return' {result}) ]
end
